--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Nookkanda unni Website njan eduth maati</h1>
-    <img src="/img/maxresdefault.jpg" alt="">
+    <img src="/img/maxresdefault.jpg" alt="doge">
 </body>
 </html>
