--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="col-md-6 vcenter hcenter">
 					<h1 class="subtopic">Who Am I</h1>
 					<p class="section-1-content">
-						Coders. Problem solvers. Computer geeks. Developers. Technical architects. We are a close knit group of computer science enthusiasts that enjoy coding and hope to make a difference with our software.
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed itaque vitae exercitationem optio rerum, eos magni ipsam harum delectus suscipit fugiat repudiandae eligendi numquam ex, dolorem ab. Eum, fugit natus.
 					</p>
 					<a href="/members/"><button class="btn btn-default btn-lg light-button">Check us out!</button></a>
 				</div>
@@ -105,14 +105,9 @@
 				<div class="col-md-6 vcenter hcenter">
 					<h1 class="subtopic">What I Do</h1>
 					<p class="section-1-content">
-						As the official Web Team and programming club of NIT Trichy, we develop and maintain the institute's 
-						official website and handle web related activities of the institute's festivals including the cultural 
-						fest, <a href="https://festember.com/">Festember</a> and the technical fest, <a href="https://www.pragyan.org/">
-						Pragyan</a>. Our members are constantly working with cutting edge technology and software on their exciting 
-						personal projects. We love Hackathons and spend a lot of our time working on new ideas. The club also 
-						conducts events and workshops on an annual basis.
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quam, labore tenetur illum, officiis, placeat deserunt nesciunt illo nostrum voluptas consequuntur! Veritatis est ipsam sapiente earum quas dolor cum similique?
 					</p>
-					<a href="/projects/"><button type="button" class="btn btn-default btn-lg light-button">Projects we've worked on</button></a>
+					<a href="/projects/"><button type="button" class="btn btn-default btn-lg light-button">Projects I've worked on</button></a>
 				</div>
 				<div class="col-md-4 hcenter vcenter">
 					<img id="whatWeDoImage" src="images/whatWeDo.jpg" width="100%">
@@ -128,8 +123,7 @@
 				<h1 class="subtopic">HackerTalks</h1>
 				<img class="event-image" src="images/deepHT.jpg" width="50%">
 				<p>
-					HackerTalks is a two day series where we present various topics spanning the breadth of the computing and programming fields. 
-					The first HackerTalks event was conducted on March 27-28 2018, giving its audience a glimpse into multiple arenas of computer science and engineering.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga omnis soluta recusandae eos temporibus aliquid mollitia officiis, quaerat architecto et inventore, odit obcaecati quam corporis ea. Distinctio nulla odio quasi!
 				</p>
 				<a href="/hackertalks/"><button class="btn btn-default btn-lg dark-button">Learn More</button></a>
 			</div>
@@ -138,15 +132,15 @@
 				<h1 class="subtopic">Workshops</h1>
 				<img class="event-image" src="images/venkatHT.jpg" width="50%">
 				<p>
-					Delta Force organises annual workshops for freshers at NIT Trichy. In previous years, we conducted interactive educational sessions that taught the participants the basics of linux and python languages and more recently, organised one that dwelled into popular algorithms and their implementation.
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde minus deleniti suscipit aliquid fuga optio voluptatibus architecto vitae doloribus perferendis! Illum qui quaerat nulla ducimus hic et maiores, dicta nisi.
 				</p>
 			</div>
 			<hr class="separator" />
 			<div class="event hcenter">
-				<h1 class="subtopic">DWoC</h1>
+				<h1 class="subtopic">Hackathons</h1>
 				<img class="event-image" src="images/dwoc.jpeg" width="50%">
 				<p>
-					<a href="https://dwoc.io/">DWoC</a> is a winter long program organised by Delta Force, the coding club of NIT Trichy. With an aim to support and improve the culture of open source software around us, this serves as a platform for young student developers (or even starters) to hone their technical skills by taking up projects of their interests. We hope this encourages collabrative experiences and allows students from all backgrounds to contribute to quality technical projects from diverse fields.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam cumque ea officia adipisci corporis molestias repudiandae amet iste aliquid molestiae quia magni maxime eaque porro, doloribus laborum nam eveniet itaque!
 				</p>
 			</div>
 		</section>
