--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<link href="css/base.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 	<!-- Favicon -->
-	<link rel="icon" type="image/jpg" href="/images/me.jpg"/>
+	<link rel="icon" type="image/jpg" href="/images/me-new.png"/>
 </head>
 <body>
 	<div id="main-body-container">
@@ -47,7 +47,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/"><img src="/images/deltaLogoWhite.png" width="20px"></a>
+					<a class="navbar-brand" href="/"><img src="/images/me-new.png" width="20px"></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,7 +55,7 @@
 					<!-- Navbar left side links -->
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="">Home<span class="sr-only">(current)</span></a></li>
-						<li><a href="members/">About me</a></li>
+						<li><a href="#whoWeAre">About me</a></li>
 						<li><a href="projects/">Projects</a></li>
 					</ul>
 					<!-- Navbar right side links -->
