--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<p class="section-1-content">
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed itaque vitae exercitationem optio rerum, eos magni ipsam harum delectus suscipit fugiat repudiandae eligendi numquam ex, dolorem ab. Eum, fugit natus.
 					</p>
-					<a href="/members/"><button class="btn btn-default btn-lg light-button">Check us out!</button></a>
+					<a href="https://www.linkedin.com/in/alan-thomas-shaji" ><button class="btn btn-default btn-lg light-button">Check me out!</button></a>
 				</div>
 				<div class="col-md-1"></div>
 			</div>
@@ -118,12 +118,12 @@
 
 		<section id="events" class="outer-container">
 			
-			<h1 class="subtopic">Events</h1>
+			<h1 class="subtopic">Events I've Led</h1>
 			<div class="event hcenter">
-				<h1 class="subtopic">HackerTalks</h1>
+				<h1 class="subtopic">Talks</h1>
 				<img class="event-image" src="images/deepHT.jpg" width="50%">
 				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga omnis soluta recusandae eos temporibus aliquid mollitia officiis, quaerat architecto et inventore, odit obcaecati quam corporis ea. Distinctio nulla odio quasi!
+					Thanks to my collegues and connections, I've got chances to lead sessions 
 				</p>
 				<a href="/hackertalks/"><button class="btn btn-default btn-lg dark-button">Learn More</button></a>
 			</div>
@@ -147,16 +147,19 @@
 	</div>
 
 	<footer class="love-footer-dark">
-		Made with ❤ by Shaji Stark
+		Made with ❤ by Shaji Stark ;)
 	</footer>
-
+	<p>
+		<a href="https://www.linkedin.com/in/alan-thomas-shaji"><span style="font-family: monospace; color: palevioletred;">instagram</span> <i>|</i></a>
+		<a href="https://www.twitter.com/shaji_stark_"><span style="font-family: monospace; color: blue;">twitter</span></a>
+	</p>
 	<!-- Main Script -->
 	<script src="js/main.js"></script>
 	<!--Particles script-->
 
 	<!--REmove later-->
 	<script>
-		alert("Page is under construction. Poyit pinne vaa");
+		//alert("Page is under construction. Poyit pinne vaa");
 	</script>
 </body>
 </html>
