--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 	<!--REmove later-->
 	<script>
-		//alert("Page is under construction. Poyit pinne vaa");
+		alert("Page is under construction. Poyit pinne vaa");
 	</script>
 </body>
 </html>
