--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 	</footer>
 	<p>
 		<a href="https://www.linkedin.com/in/alan-thomas-shaji"><span style="font-family: monospace; color: palevioletred;">instagram</span> <i>|</i></a>
-		<a href="https://www.twitter.com/shaji_stark_"><span style="font-family: monospace; color: blue;">twitter</span></a>
+		<a href="https://www.twitter.com/shaji_stark_"><span style="font-family: monospace; color: blue;">twitter</span></a> <i>|</i>
+		<a href="mailto:alanthomasshaji079@gmail.com"><span style="color: orange; font-family: monospace;">send me a mail</span></a>
 	</p>
 	<!-- Main Script -->
 	<script src="js/main.js"></script>
