--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<a href="/projects/"><button type="button" class="btn btn-default btn-lg light-button">Projects I've worked on</button></a>
 				</div>
 				<div class="col-md-4 hcenter vcenter">
-					<img id="whatWeDoImage" src="images/whatWeDo.jpg" width="100%">
+					<img id="whatWeDoImage" src="#" width="100%">
 				</div>
 				<div class="col-md-1"></div>
 			</div>
@@ -121,7 +121,7 @@
 			<h1 class="subtopic">Events I've Led</h1>
 			<div class="event hcenter">
 				<h1 class="subtopic">Talks</h1>
-				<img class="event-image" src="images/deepHT.jpg" width="50%">
+				<img class="event-image" src="#" width="50%">
 				<p>
 					Thanks to my collegues and connections, I've got chances to lead sessions 
 				</p>
@@ -130,7 +130,7 @@
 			<hr class="separator" />
 			<div class="event hcenter">
 				<h1 class="subtopic">Workshops</h1>
-				<img class="event-image" src="images/venkatHT.jpg" width="50%">
+				<img class="event-image" src="#" width="50%">
 				<p>
 					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde minus deleniti suscipit aliquid fuga optio voluptatibus architecto vitae doloribus perferendis! Illum qui quaerat nulla ducimus hic et maiores, dicta nisi.
 				</p>
@@ -138,7 +138,7 @@
 			<hr class="separator" />
 			<div class="event hcenter">
 				<h1 class="subtopic">Hackathons</h1>
-				<img class="event-image" src="images/dwoc.jpeg" width="50%">
+				<img class="event-image" src="#" width="50%">
 				<p>
 					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam cumque ea officia adipisci corporis molestias repudiandae amet iste aliquid molestiae quia magni maxime eaque porro, doloribus laborum nam eveniet itaque!
 				</p>
@@ -150,7 +150,7 @@
 		Made with ❤ by Shaji Stark ;)
 	</footer>
 	<p>
-		<a href="https://www.linkedin.com/in/alan-thomas-shaji"><span style="font-family: monospace; color: palevioletred;">instagram</span> <i>|</i></a>
+		<a href="https://www.linkedin.com/in/alan-thomas-shaji"><span style="font-family: monospace; color: palevioletred;">instagram</span></a><i>|</i>
 		<a href="https://www.twitter.com/shaji_stark_"><span style="font-family: monospace; color: blue;">twitter</span></a> <i>|</i>
 		<a href="mailto:alanthomasshaji079@gmail.com"><span style="color: orange; font-family: monospace;">send me a mail</span></a>
 	</p>
