--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="">Home<span class="sr-only">(current)</span></a></li>
 						<li><a href="#whoWeAre">About me</a></li>
-						<li><a href="projects/">Projects</a></li>
+						<li><a href="#whatWeDo">Projects</a></li>
 					</ul>
 					<!-- Navbar right side links -->
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="https://linkedin.com/in/alan-thomas-shaji">LinkedIn</a></li>
-						<li><a href="https://twitter.com/shaji_stark_">Twitter</a></li>
+						<li><a href="https://linkedin.com/in/alan-thomas-shaji"><span>LinkedIn </span> <i id="githubLogo" class="fab fa-linkedin textLogo"></i></a></li>
+						<li><a href="https://twitter.com/shaji_stark_"><span>Twitter </span><i id="githubLogo" class="fab fa-twitter textLogo"></i></a></li>
 						<li><a href="http://github.com/shaji-stark" id="gitHubNav" target="_blank"><span>Github</span><i id="githubLogo" class="fab fa-github textLogo"></i></a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
@@ -90,7 +90,7 @@
 				<div class="col-md-6 vcenter hcenter">
 					<h1 class="subtopic">Who Am I</h1>
 					<p class="section-1-content">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed itaque vitae exercitationem optio rerum, eos magni ipsam harum delectus suscipit fugiat repudiandae eligendi numquam ex, dolorem ab. Eum, fugit natus.
+						I'm a self taught developer who loves trying out new things in life and tinkering with tech. I'm a Computer Science and Engineering student at Rajiv Gandhi Institute of Technology, Kottayam.
 					</p>
 					<a href="https://www.linkedin.com/in/alan-thomas-shaji" ><button class="btn btn-default btn-lg light-button">Check me out!</button></a>
 				</div>
