--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 				<!-- This hack is Deep Bhattacharyya's idea. I know git blame says Gautham, but I'm innocent. -->
 				<div class="col-md-1"></div>
 				<div class="col-md-4 hcenter vcenter">
-					<img id="whoWeAreImage" src="images/whoWeAre.jpg" width="100%">
+					<img id="whoWeAreImage" src="/images/another-me.png" width="100%">
 				</div>
 				<div class="col-md-6 vcenter hcenter">
 					<h1 class="subtopic">Who Am I</h1>
 					<p class="section-1-content">
 						I'm a self taught developer who loves trying out new things in life and tinkering with tech. I'm a Computer Science and Engineering student at Rajiv Gandhi Institute of Technology, Kottayam.
 					</p>
-					<a href="https://www.linkedin.com/in/alan-thomas-shaji" ><button class="btn btn-default btn-lg light-button">Check me out!</button></a>
+					<a href="/asset/Alan Thomas Shaji - Resume.pdf" download="Alan Thomas Shaji - Resume.pdf"><button class="btn btn-default btn-lg light-button">Check out my resume!</button></a>
 				</div>
 				<div class="col-md-1"></div>
 			</div>
@@ -100,17 +100,17 @@
 
 		<section id="whatWeDo" class="outer-container hcenter">
 			<div class="row">
-				<!-- This hack is Deep Bhattacharyya's idea. I know git blame says Gautham, but I'm innocent. -->
+				
 				<div class="col-md-1"></div>
 				<div class="col-md-6 vcenter hcenter">
 					<h1 class="subtopic">What I Do</h1>
 					<p class="section-1-content">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quam, labore tenetur illum, officiis, placeat deserunt nesciunt illo nostrum voluptas consequuntur! Veritatis est ipsam sapiente earum quas dolor cum similique?
+						I primarily work on web frontend, but who wouldn't like putting their hands in lots of cookie jars! I like doing stuff when I'm bored and trust me, I get bored a lot! Check out my github repo to see all the projects I've worked on.
 					</p>
-					<a href="/projects/"><button type="button" class="btn btn-default btn-lg light-button">Projects I've worked on</button></a>
+					<a href="https://github.com/shaji-stark?tab=repositories"><button type="button" class="btn btn-default btn-lg light-button">Things I've done</button></a>
 				</div>
 				<div class="col-md-4 hcenter vcenter">
-					<img id="whatWeDoImage" src="#" width="100%">
+					<img id="whatWeDoImage" src="/images/another-me-2.png" width="100%">
 				</div>
 				<div class="col-md-1"></div>
 			</div>
@@ -160,7 +160,7 @@
 
 	<!--REmove later-->
 	<script>
-		alert("Page is under construction. Poyit pinne vaa");
+		//alert("Page is under construction. Poyit pinne vaa");
 	</script>
 </body>
 </html>
