phew...almost done

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<!-- OG Tags -->
 	<meta property="og:url" content="https://delta.nitt.edu" />
 	<meta property="og:title" content="Delta Force" />
-	<meta property="og:description" content="The official programming club of NIT Trichy" />
-	<meta property="og:image" content="https://delta.nitt.edu/images/deltaHeader.png" />
+	<meta property="og:description" content="My offical page" />
+	<meta property="og:image" content="" />
 
 	<!-- Jquery CDN -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -55,8 +55,8 @@
 					<!-- Navbar left side links -->
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="">Home<span class="sr-only">(current)</span></a></li>
-						<li><a href="#whoWeAre">About me</a></li>
-						<li><a href="#whatWeDo">Projects</a></li>
+						<li><a href="#whoAmI">About me</a></li>
+						<li><a href="#whatIDo">Projects</a></li>
 					</ul>
 					<!-- Navbar right side links -->
 					<ul class="nav navbar-nav navbar-right">
@@ -72,17 +72,17 @@
 		<section id="landing" class="outer-container first-container">
 			<!-- <h1>Hello</h1> -->
 			<div id="deltaLogoDiv" class="outer-container">
-				<img src="/images/me-new.png" width="175px">
+				<img src="/images/me-new.png" width="175px" onclick="paadikkoMonuse(event, this)">
 			</div>
-			<!-- Div to contain scramble text, populated in main.js, designed in main.css -->
+			<!-- Finally!!!!! My text is scrambled successfully ;-; -->
 			<div class="container">
 				<div class="text"></div>
 			</div>
 		</section>
 
-		<section id="whoWeAre" class="outer-container hcenter">
+		<section id="whoAmI" class="outer-container hcenter">
 			<div class="row">
-				<!-- This hack is Deep Bhattacharyya's idea. I know git blame says Gautham, but I'm innocent. -->
+				<!-- Someone gimme a nobel prize for making this come true XD -->
 				<div class="col-md-1"></div>
 				<div class="col-md-4 hcenter vcenter">
 					<img id="whoWeAreImage" src="/images/another-me.png" width="100%">
@@ -98,14 +98,14 @@
 			</div>
 		</section>
 
-		<section id="whatWeDo" class="outer-container hcenter">
+		<section id="whatIDo" class="outer-container hcenter">
 			<div class="row">
 				
 				<div class="col-md-1"></div>
 				<div class="col-md-6 vcenter hcenter">
 					<h1 class="subtopic">What I Do</h1>
 					<p class="section-1-content">
-						I primarily work on web frontend, but who wouldn't like putting their hands in lots of cookie jars! I like doing stuff when I'm bored and trust me, I get bored a lot! Check out my github repo to see all the projects I've worked on.
+						I primarily work on web frontend, but who wouldn't like putting their hands in lots of cookie jars! I like doing stuff when I'm bored and trust me, I get bored a lot! Check out my github repo to see all the crazy stuff I've worked on.
 					</p>
 					<a href="https://github.com/shaji-stark?tab=repositories"><button type="button" class="btn btn-default btn-lg light-button">Things I've done</button></a>
 				</div>
@@ -116,6 +116,7 @@
 			</div>
 		</section>
 
+		<!--
 		<section id="events" class="outer-container">
 			
 			<h1 class="subtopic">Events I've Led</h1>
@@ -144,13 +145,14 @@
 				</p>
 			</div>
 		</section>
+		-->
 	</div>
 
 	<footer class="love-footer-dark">
 		Made with ❤ by Shaji Stark ;)
 	</footer>
 	<p>
-		<a href="https://www.linkedin.com/in/alan-thomas-shaji"><span style="font-family: monospace; color: palevioletred;">instagram</span></a><i>|</i>
+		<a href="https://www.instagram.com/captain_shaji_stark/"><span style="font-family: monospace; color: palevioletred;">instagram</span></a><i>|</i>
 		<a href="https://www.twitter.com/shaji_stark_"><span style="font-family: monospace; color: blue;">twitter</span></a> <i>|</i>
 		<a href="mailto:alanthomasshaji079@gmail.com"><span style="color: orange; font-family: monospace;">send me a mail</span></a>
 	</p>
