phew...almost done

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Delta">
+	<meta name="description" content="Me">
 
 	<!-- OG Tags -->
-	<meta property="og:url" content="https://delta.nitt.edu" />
-	<meta property="og:title" content="Delta Force" />
+	<meta property="og:url" content="https://shaji-stark.github.io" />
+	<meta property="og:title" content="Shaji Stark" />
 	<meta property="og:description" content="My offical page" />
-	<meta property="og:image" content="" />
+	<meta property="og:image" content="/images/me-new.png" />
 
 	<!-- Jquery CDN -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -116,36 +116,6 @@
 			</div>
 		</section>
 
-		<!--
-		<section id="events" class="outer-container">
-			
-			<h1 class="subtopic">Events I've Led</h1>
-			<div class="event hcenter">
-				<h1 class="subtopic">Talks</h1>
-				<img class="event-image" src="#" width="50%">
-				<p>
-					Thanks to my collegues and connections, I've got chances to lead sessions 
-				</p>
-				<a href="/hackertalks/"><button class="btn btn-default btn-lg dark-button">Learn More</button></a>
-			</div>
-			<hr class="separator" />
-			<div class="event hcenter">
-				<h1 class="subtopic">Workshops</h1>
-				<img class="event-image" src="#" width="50%">
-				<p>
-					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde minus deleniti suscipit aliquid fuga optio voluptatibus architecto vitae doloribus perferendis! Illum qui quaerat nulla ducimus hic et maiores, dicta nisi.
-				</p>
-			</div>
-			<hr class="separator" />
-			<div class="event hcenter">
-				<h1 class="subtopic">Hackathons</h1>
-				<img class="event-image" src="#" width="50%">
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam cumque ea officia adipisci corporis molestias repudiandae amet iste aliquid molestiae quia magni maxime eaque porro, doloribus laborum nam eveniet itaque!
-				</p>
-			</div>
-		</section>
-		-->
 	</div>
 
 	<footer class="love-footer-dark">
