--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<!-- Someone gimme a nobel prize for making this come true XD -->
 				<div class="col-md-1"></div>
 				<div class="col-md-4 hcenter vcenter">
-					<img id="whoWeAreImage" src="/images/another-me.png" width="100%">
+					<img id="whoIAmImage" src="/images/another-me.png" width="100%">
 				</div>
 				<div class="col-md-6 vcenter hcenter">
 					<h1 class="subtopic">Who Am I</h1>
@@ -110,7 +110,7 @@
 					<a href="https://github.com/shaji-stark?tab=repositories"><button type="button" class="btn btn-default btn-lg light-button">Things I've done</button></a>
 				</div>
 				<div class="col-md-4 hcenter vcenter">
-					<img id="whatWeDoImage" src="/images/another-me-2.png" width="100%">
+					<img id="whatIDoImage" src="/images/another-me-2.png" width="100%">
 				</div>
 				<div class="col-md-1"></div>
 			</div>
@@ -128,7 +128,7 @@
 	</p>
 	<!-- Main Script -->
 	<script src="js/main.js"></script>
-	<!--Particles script-->
+	
 
 	<!--REmove later-->
 	<script>
