--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Me">
+	<meta name="description" content="My portolio website">
 
 	<!-- OG Tags -->
 	<meta property="og:url" content="https://shaji-stark.github.io" />
 	<meta property="og:title" content="Shaji Stark" />
-	<meta property="og:description" content="My offical page" />
+	<meta property="og:description" content="My Portfolio" />
 	<meta property="og:image" content="/images/me-new.png" />
 
 	<!-- Jquery CDN -->
