--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<p class="section-1-content">
 						I'm a self taught developer who loves trying out new things in life and tinkering with tech. I'm a Computer Science and Engineering student at Rajiv Gandhi Institute of Technology, Kottayam.
 					</p>
-					<a href="/asset/Alan Thomas Shaji - Resume.pdf" download="Alan Thomas Shaji - Resume.pdf"><button class="btn btn-default btn-lg light-button">Check out my resume!</button></a>
+					<a href="/asset/Alan Thomas Shaji - Resume.pdf" download="Alan - Resume.pdf"><button class="btn btn-default btn-lg light-button">Check out my resume!</button></a>
 				</div>
 				<div class="col-md-1"></div>
 			</div>
